--- a/requirements.txt
+++ b/requirements.txt
@@ -12,11 +12,13 @@ dj-database-url==0.5.0
 Django==3.1.7
 django-allauth==0.44.0
 django-heroku==0.3.1
+django-rest-knox==4.1.0
 djangorestframework==3.12.2
 google-api-core==1.26.1
 google-api-python-client==2.0.2
 google-auth==1.27.1
 google-auth-httplib2==0.1.0
+google-site-verification==0.0.4
 googleapis-common-protos==1.53.0
 gunicorn==20.0.4
 httplib2==0.19.0
